--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,13 +3,81 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+
+@article{PhysRevA.111.022604,
+  abbr={PhysRevA},
+  title = {Simulation of the dissipative dynamics of strongly interacting nitrogen-vacancy centers with tensor networks},
+  author = {Saiphet, Jirawat and Braun, Daniel},
+  journal = {Phys. Rev. A},
+  volume = {111},
+  issue = {2},
+  pages = {022604},
+  numpages = {9},
+  year = {2025},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.111.022604},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.111.022604}
 }
+
+@article{PhysRevApplied.19.064001,
+  title = {Hybrid Quantum-Classical Algorithms for Loan-Collection Optimization with Loan-Loss Provisions},
+  author = {Tangpanitanon, Jirawat and Saiphet, Jirawat and Palittapongarnpim, Pantita and Chaiwongkhot, Poompong and Prugsanapan, Pinn and Raksasri, Nuntanut and Wannasiwaporn, Wipada and Raksri, Yarnvith and Thajchayapong, Pairash and Chotibut, Thiparat},
+  journal = {Phys. Rev. Appl.},
+  volume = {19},
+  issue = {6},
+  pages = {064001},
+  numpages = {10},
+  year = {2023},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevApplied.19.064001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevApplied.19.064001}
+}
+
+@article{Saiphet_2021,
+doi = {10.1088/1742-6596/1719/1/012100},
+url = {https://dx.doi.org/10.1088/1742-6596/1719/1/012100},
+year = {2021},
+month = {jan},
+publisher = {IOP Publishing},
+volume = {1719},
+number = {1},
+pages = {012100},
+author = {Saiphet, Jirawat and Suwanna, Sujin and Chotibut, Thiparat and Chantasri, Areeya},
+title = {Quantum approximate optimization and k-means algorithms for data clustering},
+journal = {Journal of Physics: Conference Series}
+}
+
+@article{PhysRevA.103.022208,
+  title = {Time-delayed quantum feedback and incomplete decoherence suppression with a no-knowledge measurement},
+  author = {Saiphet, Jirawat and Suwanna, Sujin and Carvalho, Andr\'e R. R. and Chantasri, Areeya},
+  journal = {Phys. Rev. A},
+  volume = {103},
+  issue = {2},
+  pages = {022208},
+  numpages = {9},
+  year = {2021},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.103.022208},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.103.022208}
+}
+
+@article{Saiphet_2019,
+doi = {10.1088/1742-6596/1380/1/012113},
+url = {https://dx.doi.org/10.1088/1742-6596/1380/1/012113},
+year = {2019},
+month = {nov},
+publisher = {IOP Publishing},
+volume = {1380},
+number = {1},
+pages = {012113},
+author = {Saiphet, Jirawat and Chantasri, Areeya and Suwanna, Sujin},
+title = {Effects of time delay in no-knowledge quantum feedback control},
+journal = {Journal of Physics: Conference Series}
+}
+
 
 @book{einstein1956investigations,
   bibtex_show={true},
@@ -18,19 +86,6 @@
   year={1956},
   publisher={Courier Corporation},
   preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
 }
 
 @article{PhysRev.47.777,
@@ -61,33 +116,6 @@
   inspirehep_id = {3255}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
 @Article{einstein1905photoelectriceffect,
   bibtex_show={true},
   abbr={Ann. Phys.},
@@ -102,14 +130,4 @@
   doi={10.1002/andp.19053220607},
   award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
   award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
 }
